# BuildFromScratch

./: .gitignore  .pre-commit-config.yaml  README.md  myprogress.md  pyproject.toml  syllabus.md
.github/workflows/: ci.yml
phase1_core_ml/: README.md
phase1_core_ml/notebooks/: 2_logistic_regression_from_scratch.ipynb  2_logistic_regression_from_scratch_NOTES.md  3_decision_trees_random_forests.ipynb  3_decision_trees_random_forests_NOTES.md  decision_trees_random_forests.ipynb  gradient_descent_variants.ipynb  linear_regression_from_scratch.ipynb
phase1b_dsa_fundamentals/: README.md
phase1b_dsa_fundamentals/notebooks/: 1_graph_algorithms_ml_pipelines.ipynb  1_graph_algorithms_ml_pipelines_NOTES.md  2_dynamic_programming_sequence_optimization.ipynb  2_dynamic_programming_sequence_optimization_NOTES.md  3_string_algorithms_nlp.ipynb  3_string_algorithms_nlp_NOTES.md  4_advanced_tree_structures.ipynb  4_advanced_tree_structures_NOTES.md  5_sorting_searching_algorithms.ipynb  5_sorting_searching_algorithms_NOTES.md
phase1b_dsa_fundamentals/papers/: README.md
phase1b_dsa_fundamentals/src/: __init__.py
phase2_deep_learning/: README.md
phase2b_system_design/: README.md
phase2b_system_design/src/: __init__.py
phase3_transformers_modern/: README.md
phase4_retrieval_grounded_ai/: README.md
phase4_retrieval_grounded_ai/notebooks/: 4.1_retrieval_accuracy_stress_tests.ipynb  (+1 more)
phase5_scalable_efficient/: README.md
phase6_agents_reasoning/: README.md
phase7_systems_deployment/: README.md
phase8_ai_frontier/: README.md
phase9_responsible_ai/: README.md
(+3 files in other folders)
